i think this finally resolves the unwanted scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 body {
   background-color: black;
   max-width: 100vw;
+}
+.App {
+  position: relative;
 }
 .app-section {
   margin: 0 2rem;
