--- a/src/components/infoModal/InfoModal.css
+++ b/src/components/infoModal/InfoModal.css
@@ -1,20 +1,25 @@
 #infomodal {
+  background: rgba(14, 14, 14, 0.474);
+  border: 1px solid rgba(0, 0, 0, 0.274);
   display: flex;
   flex-direction: column;
+  margin: 0 auto 2rem;
   position: relative;
-  width: 50vw;
-  /* height: 300px; */
-  background: rgba(14, 14, 14, 0.474);
-  margin: 100px auto 0;
-  border: 1px solid rgba(0, 0, 0, 0.274);
+  width: 90vw;
 }
 
 .modal-tabs {
   display: flex;
 }
-.tabs, .exit-tab {
+.tabs,
+.exit-tab {
+  align-items: center;
+  color: white;
+  display: flex;
+  justify-content: center;
   font-size: 1.3rem;
-  padding: 15px;
+  margin: 0 auto;
+  padding: 15px 10px;
   text-align: center;
   background: rgba(194, 194, 194, 0.502);
   cursor: pointer;
@@ -24,16 +29,19 @@
 .tabs {
   width: 50%;
 }
-.tabs:not(:last-child){
+.tabs p {
+  font-weight:700;
+}
+.tabs:not(:last-child) {
   border-right: 1px solid rgba(0, 0, 0, 0.274);
 }
 
-.active-tabs  {
+.active-tabs {
   background: rgb(194, 194, 194);
   border-bottom: 1px solid transparent;
 }
 .exit-tab {
-width: fit-content;
+  width: fit-content;
 }
 
 /* bar above active tab */
@@ -51,20 +59,27 @@ width: fit-content;
 
 /* space behind content */
 .modal-content {
-  flex-grow : 1;
+  flex-grow: 1;
 }
 .content {
   background: rgba(0, 0, 0, 0.274);
   color: white;
-  padding: 2rem 4rem;
   width: 100%;
   height: 100%;
   display: none;
-  margin: 0!important;
+  margin: 0 !important;
 }
 .content * {
   color: white;
+  padding: 1rem;
 }
 .active-content {
   display: block;
+}
+
+@media screen and (min-width: 900px) {
+  #infomodal {
+    margin: 100px auto 0;
+    width: 50vw;
+  }
 }
