--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,18 +2,20 @@
   width: 1px;
   color: white;
   cursor: pointer;
+  position: relative;
 }
 .sidebar {
   background-color: orangered;
   width: 45px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   position: fixed; 
   top: 4rem;
   writing-mode: vertical-lr;
   text-orientation: upright;
   right: 0;
+  z-index: 5;
 }
 
 .sidebar-menu {
